[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/scripts/ui/devtools.gd" type="Script" id=1]
[ext_resource path="res://assets/ui/themes/theme_devtools.tres" type="Theme" id=2]
[ext_resource path="res://assets/ui/prefabs/interactindicator.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/ui/prefabs/popup_dialogue.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/ui/prefabs/dialoguebox.tscn" type="PackedScene" id=6]

[node name="UserInterface" type="Control"]
margin_right = 960.0
margin_bottom = 540.0

[node name="ReferenceRect" type="ReferenceRect" parent="."]
margin_right = 960.0
margin_bottom = 540.0
border_color = Color( 1, 1, 1, 1 )

[node name="DialogueBox" parent="ReferenceRect" instance=ExtResource( 6 )]
camera_offset_dialogue = 64.0
scroll_increment = 0.01

[node name="Interact_Indicator" parent="." instance=ExtResource( 3 )]
visible = false

[node name="PopupDialogue" parent="." instance=ExtResource( 4 )]
visible = false

[node name="DevTools" type="PanelContainer" parent="."]
anchor_bottom = 1.0
margin_right = 196.0
focus_mode = 1
theme = ExtResource( 2 )
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="DevTools"]
margin_left = 8.0
margin_top = 8.0
margin_right = 188.0
margin_bottom = 532.0

[node name="DEVELOPER TOOLS" type="RichTextLabel" parent="DevTools/VBoxContainer"]
margin_right = 180.0
margin_bottom = 15.0
bbcode_enabled = true
bbcode_text = "[b][center]DEVELOPER TOOLS[/center][/b]"
text = "DEVELOPER TOOLS"
fit_content_height = true

[node name="Reset" type="Button" parent="DevTools/VBoxContainer"]
margin_top = 19.0
margin_right = 180.0
margin_bottom = 58.0
focus_mode = 1
size_flags_vertical = 3
enabled_focus_mode = 1
text = "Reset Game"

[node name="HSeparator" type="HSeparator" parent="DevTools/VBoxContainer"]
margin_top = 62.0
margin_right = 180.0
margin_bottom = 66.0

[node name="RichTextLabel" type="RichTextLabel" parent="DevTools/VBoxContainer"]
margin_top = 70.0
margin_right = 180.0
margin_bottom = 85.0
bbcode_enabled = true
bbcode_text = "[b][center]Teleport to Room[/center][/b]"
text = "Teleport to Room"
fit_content_height = true

[node name="Hallway" type="Button" parent="DevTools/VBoxContainer"]
margin_top = 89.0
margin_right = 180.0
margin_bottom = 128.0
size_flags_vertical = 3
text = "Hallway"

[node name="TopicSpot" type="Button" parent="DevTools/VBoxContainer"]
margin_top = 132.0
margin_right = 180.0
margin_bottom = 171.0
size_flags_vertical = 3
text = "TopicSpot"

[node name="BandN" type="Button" parent="DevTools/VBoxContainer"]
margin_top = 175.0
margin_right = 180.0
margin_bottom = 215.0
size_flags_vertical = 3
text = "BandN"

[node name="HSeparator3" type="HSeparator" parent="DevTools/VBoxContainer"]
margin_top = 219.0
margin_right = 180.0
margin_bottom = 223.0

[node name="RichTextLabel3" type="RichTextLabel" parent="DevTools/VBoxContainer"]
margin_top = 227.0
margin_right = 180.0
margin_bottom = 242.0
bbcode_enabled = true
bbcode_text = "[b][center]Game Resolution[/center][/b]"
text = "Game Resolution"
fit_content_height = true

[node name="Resolution" type="OptionButton" parent="DevTools/VBoxContainer"]
margin_top = 246.0
margin_right = 180.0
margin_bottom = 285.0
size_flags_vertical = 3
text = "960 x 540"
items = [ "960 x 540", null, false, 0, null, "1920 x 1080", null, false, 1, null, "2880 x 1620", null, false, 2, null ]
selected = 0

[node name="Fullscreen" type="CheckButton" parent="DevTools/VBoxContainer"]
margin_top = 289.0
margin_right = 180.0
margin_bottom = 329.0
size_flags_vertical = 3
text = "Fullscreen"

[node name="HSeparator4" type="HSeparator" parent="DevTools/VBoxContainer"]
margin_top = 333.0
margin_right = 180.0
margin_bottom = 337.0

[node name="RichTextLabel2" type="RichTextLabel" parent="DevTools/VBoxContainer"]
margin_top = 341.0
margin_right = 180.0
margin_bottom = 356.0
bbcode_enabled = true
bbcode_text = "[b][center]Dialogue[/center][/b]"
text = "Dialogue"
fit_content_height = true

[node name="FastForwardDialogue" type="CheckButton" parent="DevTools/VBoxContainer"]
margin_top = 360.0
margin_right = 180.0
margin_bottom = 400.0
size_flags_vertical = 3
text = "Fast Forward"

[node name="Open At Knot" type="Button" parent="DevTools/VBoxContainer"]
margin_top = 404.0
margin_right = 180.0
margin_bottom = 443.0
size_flags_vertical = 3
text = "Open At Knot"

[node name="LineEdit" type="LineEdit" parent="DevTools/VBoxContainer"]
margin_top = 447.0
margin_right = 180.0
margin_bottom = 471.0
placeholder_text = "type knot name here"
caret_blink = true

[node name="HSeparator2" type="HSeparator" parent="DevTools/VBoxContainer"]
margin_top = 475.0
margin_right = 180.0
margin_bottom = 479.0

[node name="MuteAudio" type="CheckButton" parent="DevTools/VBoxContainer"]
margin_top = 483.0
margin_right = 180.0
margin_bottom = 523.0
size_flags_vertical = 3
text = "Mute Audio"

[connection signal="pressed" from="DevTools/VBoxContainer/Reset" to="DevTools" method="_on_Reset_pressed"]
[connection signal="pressed" from="DevTools/VBoxContainer/Hallway" to="DevTools" method="_on_Hallway_pressed"]
[connection signal="pressed" from="DevTools/VBoxContainer/TopicSpot" to="DevTools" method="_on_TopicSpot_pressed"]
[connection signal="pressed" from="DevTools/VBoxContainer/BandN" to="DevTools" method="_on_BandN_pressed"]
[connection signal="item_selected" from="DevTools/VBoxContainer/Resolution" to="DevTools" method="_on_Resolution_item_selected"]
[connection signal="toggled" from="DevTools/VBoxContainer/Fullscreen" to="ReferenceRect/DialogueBox" method="_on_Fullscreen_toggled"]
[connection signal="toggled" from="DevTools/VBoxContainer/FastForwardDialogue" to="DevTools" method="_on_FastForwardDialogue_toggled"]
[connection signal="pressed" from="DevTools/VBoxContainer/Open At Knot" to="DevTools" method="_on_Open_At_Knot_pressed"]
[connection signal="focus_entered" from="DevTools/VBoxContainer/LineEdit" to="DevTools" method="_on_LineEdit_focus_entered"]
[connection signal="focus_exited" from="DevTools/VBoxContainer/LineEdit" to="DevTools" method="_on_LineEdit_focus_exited"]
[connection signal="toggled" from="DevTools/VBoxContainer/MuteAudio" to="DevTools" method="_on_MuteAudio_toggled"]
